<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/score_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/ans_icon"
        android:padding="15dp">

        <TextView
            android:id="@+id/question_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:text="@string/greeting_text2" />

        <RelativeLayout
            android:id="@+id/your_ans_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/question_text">

            <LinearLayout
                android:id="@+id/ans_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_ans"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/given_ans_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_weight="0.5"
                    android:textColor="@color/red"
                    tools:text="@string/greeting_text1" />
            </LinearLayout>

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/your_ans_container"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correct_ans"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/correct_ans_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_weight="0.5"
                android:textColor="@color/green"
                tools:text="@string/greeting_text1" />

        </LinearLayout>

    </RelativeLayout>

    <ImageView
        android:id="@+id/ans_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/app_name"
        android:padding="6dp"
        tools:src="@drawable/result_1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_below="@+id/score_container"
        android:background="@color/toolbar_boarder" />

</RelativeLayout>