<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbarTop"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarTop"
        android:paddingBottom="15dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:paddingTop="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/btnSpeaker"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/firstLife"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:contentDescription="@string/app_name"
                android:padding="3dp"
                android:src="@drawable/ic_heart" />

            <ImageView
                android:id="@+id/secondLife"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:contentDescription="@string/app_name"
                android:padding="3dp"
                android:src="@drawable/ic_heart" />

            <ImageView
                android:id="@+id/thirdLife"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:contentDescription="@string/app_name"
                android:padding="3dp"
                android:src="@drawable/ic_heart" />

            <ImageView
                android:id="@+id/fourthLife"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:contentDescription="@string/app_name"
                android:padding="3dp"
                android:src="@drawable/ic_heart" />

            <ImageView
                android:id="@+id/fifthLife"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:contentDescription="@string/app_name"
                android:padding="3dp"
                android:src="@drawable/ic_heart" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/btnSpeaker"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@color/gray"
            android:layout_alignParentEnd="true"
            tools:src="@drawable/ic_speaker" />

        <TextView
            android:id="@+id/tvQuestionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnSpeaker"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:lineSpacingMultiplier="1.1"
            android:textSize="17sp"
            tools:text="@string/quiz_question_title" />

        <TextView
            android:id="@+id/tvQuestionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvQuestionTitle"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:lineSpacingMultiplier="1.1"
            android:textSize="17sp"
            tools:text="@string/quiz_prompt" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvQuiz"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/btnNext"
            android:layout_below="@id/tvQuestionText"
            android:scrollbars="vertical" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/next_question" />

        <include layout="@layout/view_loader" />

    </RelativeLayout>


</RelativeLayout>